# Slot_Machine_v2

./: Bet.cpp  Bet.cpp~  Bet.h  CMakeLists.txt  ConsoleApplication59.vcxproj  ConsoleApplication59.vcxproj.filters  Credit.h  CreditField.cpp  CreditField.h  Free_Games.cpp  Free_Games.h  Gamble.cpp  Gamble.h  Keno.cpp  Keno.h  Keno_HotAndCold.cpp  Keno_HotAndCold.h  Makefile  Matrix.cpp  Matrix.h  MatrixPharaohs.cpp  MatrixPharaohs.h  PaytableSuperFire.cpp  PaytableSuperFire.h  PaytableTiger'sBattle.h  PaytableTigersBattle.cpp  PaytableTigersBattle.cpp~  PaytableWisePharaohs5.cpp  PaytableWisePharaohs5.h  PrintGameName.cpp  PrintGameName.h  Select_Game.cpp  Select_Game.h  Slot_Machine  Slot_Machine.cpp~  Slot_Machine.pub  Slot_Machine_Project  Start.cpp~  Start.h
